added logo and buttons over carousel on landing page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,8 @@
 
 // CAROUSEL
 #home-page-carousel {
-  height: 100vh;
+  position: relative;
+  display: flex;
 }
 
 .bg-img-1 {
@@ -18,9 +19,30 @@
 
 .carousel-image {
   height: 100vh;
-  background: no-repeat;
+  // background: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.logo {
+  width: 20rem;
+  // position: absolute;
+  // top: 0;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
+  // margin: auto;
+}
+
+.home-page-buttons {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  flex-grow: 0;
+  height: 10rem;
 }
 
 .banner {
@@ -32,10 +54,7 @@
   width: 100%;
 }
 
-.logo {
-  width: 20rem;
-  // padding-top: 1rem;
-}
+
 
 .header-home-top {
   color: white;
