--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,22 +11,27 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <%# <% if user_signed_in? %>
-          <li class="nav-item active">
+          <%# <li class="nav-item active">
             <%= link_to "Home", "#", class: "nav-link button-navbar" %>
-          </li>
+          <%# </li>
           <li class="nav-item">
             <%= link_to "About us", "#", class: "nav-link button-navbar" %>
-          </li>
-          <li class="nav-item dropdown">
-          <%# <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          <%# </a> %>
+          <%# </li>
+          <li class="nav-item dropdown">  %>
+
+          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="navbar-toggler-icon"></span>
+          </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              <%= link_to "Quizzing", "#", class: "dropdown-item" %>
+              <%= link_to "Karaoke", "#", class: "dropdown-item" %>
+              <%= link_to "Who we are", "#", class: "dropdown-item" %>
+              <%= link_to "Access", "#", class: "dropdown-item" %>
+              <%= link_to "Quizdex", "#", class: "dropdown-item" %>
             </div>
           </li>
+
+
         <%# <% else %>
           <%# <li class="nav-item">
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
