added padding to hamburger

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,3 +6,8 @@
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
+
+.hamburger-menu {
+  padding: 0px 10px 0px 10px;
+  // border: 1px solid grey;
+}
