--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,40 +4,16 @@
       <%= image_tag "logo-navbar" %>
     <% end %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a href="#" class="hamburger-menu" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="navbar-toggler-icon hamburger-lines"></span>
+    </a>
+      <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+        <%= link_to "Quizzing", "#", class: "dropdown-item" %>
+        <%= link_to "Karaoke", "#", class: "dropdown-item" %>
+        <%= link_to "Who we are", "#", class: "dropdown-item" %>
+        <%= link_to "Access", "#", class: "dropdown-item" %>
+        <%= link_to "Quizdex", "#", class: "dropdown-item" %>
+      </div>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <%# <% if user_signed_in? %>
-          <%# <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link button-navbar" %>
-          <%# </li>
-          <li class="nav-item">
-            <%= link_to "About us", "#", class: "nav-link button-navbar" %>
-          <%# </li>
-          <li class="nav-item dropdown">  %>
-
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="navbar-toggler-icon"></span>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Quizzing", "#", class: "dropdown-item" %>
-              <%= link_to "Karaoke", "#", class: "dropdown-item" %>
-              <%= link_to "Who we are", "#", class: "dropdown-item" %>
-              <%= link_to "Access", "#", class: "dropdown-item" %>
-              <%= link_to "Quizdex", "#", class: "dropdown-item" %>
-            </div>
-          </li>
-
-
-        <%# <% else %>
-          <%# <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          <%# </li> %>
-        <%# <% end %>
-      </ul>
-    </div>
   </div>
 </div>
