--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,12 +8,11 @@
       <span class="navbar-toggler-icon hamburger-lines"></span>
     </a>
       <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-        <%= link_to "Quizzing", "#", class: "dropdown-item" %>
+        <%= link_to "Quizzing", "#{root_path}#quizzing-section", class: "dropdown-item" %>
         <%= link_to "Karaoke", "#", class: "dropdown-item" %>
         <%= link_to "Who we are", "#", class: "dropdown-item" %>
         <%= link_to "Access", "#", class: "dropdown-item" %>
         <%= link_to "Quizdex", "#", class: "dropdown-item" %>
       </div>
-
   </div>
 </div>
