--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,14 +45,14 @@
   height: 10rem;
 }
 
-.banner {
-  background-image: url('banner2.png'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  align-items: center;
-  width: 100%;
-}
+// .banner {
+//   background-image: url('banner2.png'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+//   background-size: cover;
+//   background-position: center;
+//   height: 100vh;
+//   align-items: center;
+//   width: 100%;
+// }
 
 
 
@@ -69,18 +69,8 @@
   font-weight: bold;
 }
 
-
-.home-testimonial-card {
-  display: flex;
-  align-items: center;
-  padding: 1rem;
-  border: 4px solid black;
-
-  p {
-    margin: 0;
-  }
-
-  .avatar {
-    margin-left: 0.5rem;
-  }
+.quizzing-category-cards a {
+  text-decoration: none;
+  color: black;
+  font-weight: lighter;
 }
