--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -74,3 +74,15 @@
   color: black;
   font-weight: lighter;
 }
+
+.quizzing-category-img {
+  border-radius: 5px;
+}
+
+.card-title-cont {
+  height: 210px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  font-size: 20;
+}
