--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -79,10 +79,31 @@
   border-radius: 5px;
 }
 
-.card-title-cont {
-  height: 210px;
+.quizzing-category-img-1 {
+  background-image: url("smile.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+}
+
+.quizzing-category-img-2 {
+  background-image: url("dog.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+}
+
+.quizzing-category-img-3 {
+  background-image: url("answers.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+}
+
+.quizzing-category-image {
+  position: relative;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio, adjust as needed */
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
   display: flex;
-  align-items: flex-end;
   justify-content: center;
-  font-size: 20;
+  align-items: flex-end;
+}
+
+.card-title {
+  position: absolute;
+  bottom: 10px; /* Adjust as needed for your desired vertical position */
 }
