--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,13 +12,13 @@
       <%= image_tag("logo.png", class: "logo mb-1 mt-5 img-fluid", alt: "quizmaster logo") %>
     </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center btn-block">
-        <h5 class="button-quizdog-primary">FIND A QUIZ</h5>
+        <h5 class="btn-56">FIND A QUIZ</h5>
       </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-quizdog-primary">START A QUIZ</h5>
+        <h5 class="btn-56">START A QUIZ</h5>
       </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-quizdog-primary">HOST YOUR OWN</h5>
+        <h5 class="btn-56">HOST YOUR OWN</h5>
       </div>
     </div>
   </div>
