added routes for static pages, pages controller methods and views

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,10 +15,10 @@
         <h5 class="btn-56"><%= link_to 'FIND A QUIZ', venues_path %></h5>
       </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center">
-        <h5 class="btn-56">START A QUIZ</h5>
+        <h5 class="btn-56"><%= link_to 'START A QUIZ!', start_a_quiz_path %></h5>
       </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center">
-        <h5 class="btn-56">HOST YOUR OWN</h5>
+        <h5 class="btn-56"><%= link_to 'HOST YOUR OWN', host_your_own_path %></h5>
       </div>
     </div>
   </div>
