--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,6 +1,20 @@
-<h1>Our pubs</h1>
+<div class="container">
+  <p>Fancy the funnest challenge you can have in a pub? Fancy winning loads of prizes? Fancy learning something whilst damaging close friendships?
+  Sick of the same egg heads winning every week?
+  If yes, Quiz Dog has you covered.
+  We have venues all across London (and one in America) that blow the rest out of the water.
+  Everything’s done on your phone too, because we want to save this planet one sheet of paper at a time! And with our anti-cheating measures, you can’t lose (unless you score fewer points than the other teams)!!!
+  Check our venues page to find your closest Quiz Dog event.
+  Fancy the funnest challenge you can have in a pub? Fancy winning loads of prizes? Fancy learning something whilst damaging close friendships?
+  Sick of the same egg heads winning every week?
+  If yes, Quiz Dog has you covered.
+  We have venues all across London (and one in America) that blow the rest out of the water.
+  Everything’s done on your phone too, because we want to save this planet one sheet of paper at a time! And with our anti-cheating measures, you can’t lose (unless you score fewer points than the other teams)!!!
+  Check our venues page to find your closest Quiz Dog event.
+  <p>
+</div>
 
-<div class="container-venues-map">
+<div class="container container-venues-map">
   <div class="cards">
     <% @venues.each do |venue| %>
     <div class="card-venue-category">
